--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -31,7 +31,7 @@
 .blog-details-wrapper {
   .comment-respond {
     margin-top: 70px;
-    margin-bottom: 15px;
+    margin-bottom: 40px;
   }
   .post-comments {
     margin-top: 0;
