--- a/sass/pages/_project-details.scss
+++ b/sass/pages/_project-details.scss
@@ -1,6 +1,6 @@
 .project-page-wrapper {
-    padding-top: 145px;
-    padding-bottom: 136px;
+    padding-top: 144px;
+    padding-bottom: 144px;
 
     @include rmaxwd(991) {
         padding: 100px 0;
@@ -15,7 +15,7 @@
     }
 }
 .project-detail-area {
-    padding: 145px 0;
+    padding: 144px 0;
 
     @include rmaxwd(991) {
         padding: 100px 0;
