--- a/sass/pages/_service-page.scss
+++ b/sass/pages/_service-page.scss
@@ -1,6 +1,6 @@
 // Service Area
 .service-page-service-area {
-    padding-top: 140px;
+    padding-top: 144px;
     padding-bottom: 120px;
 
     @include rmaxwd(991) {
@@ -55,7 +55,7 @@
 
 // Service Details Page
 .service-details-wrapper {
-    padding-top: 140px;
+    padding-top: 144px;
     padding-bottom: 132px;
 
     @include rmaxwd(991) {
