--- a/sass/pages/_team-member.scss
+++ b/sass/pages/_team-member.scss
@@ -1,6 +1,6 @@
 .team-page-area {
-    padding-top: 140px;
-    padding-bottom: 175px;
+    padding-top: 144px;
+    padding-bottom: 181px;
 
     @include rmaxwd(991) {
         padding: 100px 0;
