--- a/sass/partials/_theme-default.scss
+++ b/sass/partials/_theme-default.scss
@@ -172,7 +172,7 @@ input:focus {
 .page-area,
 .blog-area {
   padding-top: 144px;
-  padding-bottom: 129px;
+  padding-bottom: 104px;
 
   @include rmaxwd(991) {
     padding-top: 100px;
